# djangotest

./: .gitignore  README.md  manage.py  pyproject.toml
djangotest/: settings.py  urls.py
djangotest/kore/: admin.py  apps.py  models.py
djangotest/kore/migrations/: 0001_initial.py  0002_post_date.py
